0026665: Visualization, TKOpenGl - specify precision for integer uniforms explicitly within OpenGL ES

Use lowp for enumerations / Boolean uniforms.
Define default integer precision to highp in Fragment Shader when available.